--- a/css/styles.css
+++ b/css/styles.css
@@ -358,10 +358,9 @@ display: none;
   color: #dbe4ed;
 }
 
-/*#pills-movie{
-  background-color: rgba(235, 223, 223, 0.549);
- 
-}*/
+h4{
+  color: #dbe4ed;
+}
 
 #searchBtn{
   justify-content: center;
